--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/src/assets/@.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aash</title>
-    <base href="/" />
+    <base href="/react-portfolio" />
   </head>
   <body>
     <div id="root"></div>
